main banner area

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
               </nav>
         </div>
     </header>
-<!-- ===================================== End Header Area ======================================= -->
 
 <!-- =================================== Main Area Starts ======================================= -->
 <main class="site-main">
@@ -53,15 +52,15 @@
 <!-- =================================== Banner Area ======================================= -->
 <section class="site-banner">
    <div class="container">
-<div class="row">
+    <div class="row">
     <div class="col-lg-6 col-md-12 site-title">
         <h3 class="title-tex">Hey!</h3>
         <h1 class="title-text text-uppercase">I'm Jeannie.</h1>
-        <h4 class="title-text text-uppercase">A Full Stack Web Developer</h4>
+        <h4 class="title-text text-uppercase">Full Stack Web Developer</h4>
         <div class="site-buttons">
             <div class="d-flex flex-row flex-wrap">
-                <button type="button" class="primary-button mr-4 text-uppercase">hire me</button>
-                <button type="button" class="secondary-button text-uppercase">get cv</button>
+                <button type="button" class="btn button primary-button mr-4 text-uppercase">hire me</button>
+                <button type="button" class="btn button secondary-button text-uppercase">get cv</button>
             </div>
 
         </div>
@@ -72,11 +71,6 @@
 </div>
    </div>
 </section>
-<!-- =================================== Banner Ends ======================================= -->
-
-
-
-
 
 </main>
 <!-- =================================== Main Area Ends ======================================= -->
