--- a/index.html
+++ b/index.html
@@ -71,7 +71,42 @@
 </div>
    </div>
 </section>
+<!-- =================================== About Area ======================================= -->
+<section class="about-area">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-6 col-md-12">
+                <div class="about-image">
+                    <img src="./img/digital-art-g75ecbb1cb_1920.jpg" alt="about me" class="img-fluid">
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-12 about-title">
+                <h2 class="text-uppercase pt-5">
+                    <span>Let me</span>
+                    <span>introduce</span>
+                    <span>myself</span>
+                </h2>
+                <div class="paragraph text-align">
+                    <p class="para"> 
+                        My name is Jeannie Torres, I am a Full Stack web Developer with a passion for front end designs.<br>
+                        I am currently working within the Jamstack; connecting dynamic React front-ends
+                        to flexible & scalable content management systems.
+                    </p>
+                    <p class="para">
+                        As a developer I am persistent, passionate, & eager to continue growing in the field. 
+                        After spending over 6 years as an account manager; I realized that it was not the right path for me.
+                        I strive for challenge & mental stimulation to keep myself motivated, 
+                        which is why I fell in love with software development & ultimately found my calling.
+                    </p>
+                </div>
+                <button type="button" class="btn button primary-button text-uppercase">Download cv</button>
+            </div>
+        </div>
+    </div>
+</section>
 
+
+<!-- =================================== About area Ends ======================================= -->
 </main>
 <!-- =================================== Main Area Ends ======================================= -->
 
