--- a/index.html
+++ b/index.html
@@ -16,32 +16,21 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
     <!-- =================================== Start Header Area ======================================= -->
     <header class="header_area">
         <div class="main-menu">
             <nav class="navbar navbar-expand-lg navbar-light">
-            
-                  <!-- Brand and toggle get grouped for better mobile display -->
                   <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                      <span class="sr-only"></span>
-                    </button>
                     <a class="navbar-brand" href="#">
                         <img alt="Logo" src="./img/JTlogo.jpeg">
                     </a>
                   </div>
-              
-                  <!-- Collect the nav links, forms, and other content for toggling -->
-                  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                      <li class="nav-item active"><a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a></li>
-                      <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                      <li class="nav-item"><a class="nav-link" href="#">Skills</a></li>
-                      <li class="nav-item"><a class="nav-link" href="#">Projects</a></li> 
+                      <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-fw fa-home"></i> Home <span class="sr-only">(current)</span></a></li>
+                      <li class="nav-item"><a class="nav-link" href="#"><i class="fa-solid fa-user-gear"></i> About </a></li>
+                      <li class="nav-item"><a class="nav-link" href="#"><i class="fa-solid fa-puzzle-piece"></i> Skills </a></li>
+                      <li class="nav-item"><a class="nav-link" href="#"><i class="fa-solid fa-code-pull-request"></i> Projects </a></li> 
                     </ul>
-                  </div><!-- /.navbar-collapse -->
-
               </nav>
         </div>
     </header>
@@ -49,11 +38,11 @@
 <!-- =================================== Main Area Starts ======================================= -->
 <main class="site-main">
 
-<!-- =================================== Banner Area ======================================= -->
-<section class="site-banner">
-   <div class="container">
+<!-- =================================== Banner ======================================= -->
+<section class="site-banner jumbotron jumbotron-fluid text-center" style="margin-bottom:0">
+   <div class="container mx-auto">
     <div class="row">
-    <div class="col-lg-6 col-md-12 site-title">
+    <div class="col-lg-6 col-md-12 m-5 site-title">
         <h3 class="title-tex">Hey!</h3>
         <h1 class="title-text text-uppercase">I'm Jeannie.</h1>
         <h4 class="title-text text-uppercase">Full Stack Web Developer</h4>
@@ -65,17 +54,17 @@
 
         </div>
     </div>
-    <div class="col-lg-6 col-md-12 title-text banner-image">
+    <div class="col-lg-6 col-md-12 m-5 title-text banner-image">
         <img alt="banner" class="img-fluid" src='./img/banner programmer-.png'>
     </div>
 </div>
    </div>
 </section>
-<!-- =================================== About Area ======================================= -->
+<!-- =================================== About ======================================= -->
 <section class="about-area">
-    <div class="container-fluid">
+    <div class="container mx-auto">
         <div class="row">
-            <div class="col-lg-6 col-md-12">
+            <div class="col-lg-6 col-md-12 ml-auto">
                 <div class="about-image">
                     <img src="./img/digital-art-g75ecbb1cb_1920.jpg" alt="about me" class="img-fluid">
                 </div>
@@ -88,8 +77,8 @@
                 </h2>
                 <div class="paragraph text-align">
                     <p class="para"> 
-                        My name is Jeannie Torres, I am a Full Stack web Developer with a passion for front end designs.<br>
-                        I am currently working within the Jamstack; connecting dynamic React front-ends
+                        My name is Jeannie Torres, I am a Full Stack web Developer with a passion for front end designs.
+                        I'm currently working within the Jamstack; connecting dynamic React front-ends
                         to flexible & scalable content management systems.
                     </p>
                     <p class="para">
@@ -104,10 +93,145 @@
         </div>
     </div>
 </section>
+<!-- =================================== skills ======================================= -->
+<section class="skills-area">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center skills-title">
+                <h1 class="text-uppercase title-text"> Technical Skills </h1>
+                <p class="parra"> All of the skills acquired will go here !!</p>
+            </div>
+        </div>
+    </div>
+     <div class="container skills-list">
+         <div class="row">
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <div class="skills">
+                    <div class="skills-img text-center py-4">
+                        <img class="mx-auto rounded-circle img-fluid" style="width:60px;" src="img/css-3.svg" alt="CSS3 logo">
+                        <div class="card-body text-center">
+                            <h5 class="card-title text-uppercase font-roboto">CSS3</h5>
+                            <p class="card-text text-secondary">
+                                Some quick details regarding the skill set above!!!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <div class="skills">
+                    <div class="skills-img text-center py-4">
+                        <img class="mx-auto rounded-circle img-fluid" style="width:60px;" src="img/html-1.svg" alt="HTML5 logo">
+                        <div class="card-body text-center">
+                            <h5 class="card-title text-uppercase font-roboto">HTML5</h5>
+                            <p class="card-text text-secondary">
+                                Some quick details regarding the skill set above!!!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <div class="skills">
+                    <div class="skills-img text-center py-4">
+                        <img class="mx-auto rounded-circle img-fluid" style="width:60px;"  src="img/javascript-1.svg" alt="JS logo">
+                        <div class="card-body text-center">
+                            <h5 class="card-title text-uppercase font-roboto">Javascript</h5>
+                            <p class="card-text text-secondary">
+                                Some quick details regarding the skill set above!!!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <div class="skills">
+                    <div class="skills-img text-center py-4">
+                        <img class="mx-auto rounded-circle img-fluid" style="width:60px;" src="img/gatsby.svg" alt="Gatsby logo">
+                        <div class="card-body text-center">
+                            <h5 class="card-title text-uppercase font-roboto">Gatsby</h5>
+                            <p class="card-text text-secondary">
+                                Some quick details regarding the skill set above!!!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+         </div>
+     </div>
+     <div class="container skills-list">
+        <div class="row">
+           <div class="col-lg-3 col-md-6 col-sm-12">
+               <div class="skills">
+                   <div class="skills-img text-center py-4">
+                       <img class="mx-auto rounded-circle img-fluid" style="width:60px;" src="img/Bootstrap.png" alt="Bootstrap logo">
+                       <div class="card-body text-center">
+                           <h5 class="card-title text-uppercase font-roboto">Bootstrap</h5>
+                           <p class="card-text text-secondary">
+                               Some quick details regarding the skill set above!!!
+                           </p>
+                       </div>
+                   </div>
+               </div>
+           </div>
+           <div class="col-lg-3 col-md-6 col-sm-12">
+               <div class="skills">
+                   <div class="skills-img text-center py-4">
+                       <img class="mx-auto rounded-circle img-fluid" style="width:60px;" src="img/react-1.svg" alt="Reactjs logo">
+                       <div class="card-body text-center">
+                           <h5 class="card-title text-uppercase font-roboto">Reactjs</h5>
+                           <p class="card-text text-secondary">
+                               Some quick details regarding the skill set above!!!
+                           </p>
+                       </div>
+                   </div>
+               </div>
+           </div>
+           <div class="col-lg-3 col-md-6 col-sm-12">
+               <div class="skills">
+                   <div class="skills-img text-center py-4">
+                       <img class="mx-auto rounded-circle img-fluid" style="width:60px;" src="img/nodejs-1.svg" alt="Nodejs logo">
+                       <div class="card-body text-center">
+                           <h5 class="card-title text-uppercase font-roboto">Nodejs</h5>
+                           <p class="card-text text-secondary">
+                               Some quick details regarding the skill set above!!!
+                           </p>
+                       </div>
+                   </div>
+               </div>
+           </div>
+           <div class="col-lg-3 col-md-6 col-sm-12">
+               <div class="skills">
+                   <div class="skills-img text-center py-4">
+                       <img class="mx-auto rounded-circle img-fluid" style="width:60px;" src="img/Wordpresslogo.png" alt="WP logo">
+                       <div class="card-body text-center">
+                           <h5 class="card-title text-uppercase font-roboto">WordPress Developer</h5>
+                           <p class="card-text text-secondary">
+                               Some quick details regarding the skill set above!!!
+                           </p>
+                       </div>
+                   </div>
+               </div>
+           </div>  
+        </div>
+    </div>
+</section>
+<!-- =================================== Projects  ======================================= -->
+
+<section class="project-area">
+    <div class="container">
+        <div class="project-title pb-5">
+            <h1 class="text-uppercase title-h1">Projects</h1>
+            <h1 class="text-uppercase title-h1">WordPress Sites</h1>
+        </div>
+    </div>
+</section>
 
 
-<!-- =================================== About area Ends ======================================= -->
+
 </main>
+
+<!-- =================================== Main Area Ends ======================================= -->
 <!-- =================================== Main Area Ends ======================================= -->
 
 
