Footer & some additional edits

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     <!-- =================================== Header ======================================= -->
     <header class="header_area">
         <div class="main-menu">
-            <nav class="navbar navbar-expand-sm bg-light navbar-light">
-                
+            <nav class="navbar navbar-expand-sm navbar-light">
+                <!-- <a class="navbar-brand" href="#"><img src="./img/jtechLogo.png" alt="logo" style="width:12rem;"></a> -->
                     <!-- Toggler/collapsible Button -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                   <span class="navbar-toggler-icon"></span>
@@ -86,7 +86,7 @@
         <div class="row">
             <div class="col-lg-6 col-md-12">
                 <div class="about-image">
-                    <img src="./img/digital-art-g75ecbb1cb_1920.jpg" alt="about me" class="img-fluid">
+                    <img src="./img/me.jpeg" alt="about me" class="img-fluid" style="height:44rem;">
                 </div>
             </div>
             <div class="col-lg-6 col-md-12 about-title">
@@ -240,8 +240,7 @@
 <section class="project-area">
     <div class="container">
         <div class="project-title">
-            <h1 class="text-uppercase title-h1">My Projects</h1>
-            <h1 class="text-uppercase title-h1">WordPress Sites</h1>
+            <h1 class="text-uppercase">Projects</h1>
         </div>
 
         <div class="button-group">
@@ -335,7 +334,25 @@
 
 
 </main>
-<!-- =================================== Main Area Ends ======================================= -->
-
+<!-- =================================== Footer ======================================= -->
+<div class="footer-basic">
+    <footer>
+        <div class="social">
+            <a href="https://github.com/Jeanniet89" rel="noopener noreferrer" target="_blank" aria-label="github"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/jeannie-torres/" rel="noopener noreferrer" target="_blank" aria-label="linkedin"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="mailto:jeanniet89@gmail.com" rel="noopener noreferrer" target="_blank" aria-label="email"><i class="fa-solid fa-envelope"></i></a>
+            <a href="https://docs.google.com/document/d/1qNkhrYK5gTDhB-iHQyVLz2-z49nv2do8q_L_cEBHdG8/edit?usp=sharing" rel="noopener noreferrer" target="_blank" aria-label="file"><i class="fa-solid fa-file"></i></a>
+        </div>
+        <ul class="list-inline">
+            <li class="list-inline-item"><a href="#">Home</a></li>
+            <li class="list-inline-item"><a href="#">About</a></li>
+            <li class="list-inline-item"><a href="#">Skills</a></li>
+            <li class="list-inline-item"><a href="#">Projects</a></li>
+            <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
+        </ul>
+        <p class="copyright">J.Tech © 2022<br><img id="jtech-logo" src="img/jtechLogo.png" alt="jtechLogo" aria-hidden="true">
+        </p>
+    </footer>
+</div>
 </body>
 </html>
