Skills area edits

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
              <h4 class="title-text text-uppercase">Full Stack Web Developer</h4>
              <div class="site-buttons">
                  <div class="d-flex flex-row flex-wrap">
-                     <button type="button" class="btn button primary-button mr-4 text-uppercase">Hire me</button>
-                     <button type="button" class="btn button secondary-button text-uppercase">Get cv</button>
-                 </div>
+                     <a href="mailto:jeanniet89@gmail.com" rel="noopener noreferrer" target="_blank" class="btn button primary-button text-uppercase" type="button" role="button"aria-label="email">Hire me</a>
+                     <a href="https://docs.google.com/document/d/1qNkhrYK5gTDhB-iHQyVLz2-z49nv2do8q_L_cEBHdG8/edit?usp=sharing" rel="noopener noreferrer" target="_blank" class="btn button primary-button text-uppercase" type="button" role="button" aria-label="file">Get cv</a>                
+                     </div>
              </div>
          </div>
         </div>
@@ -108,7 +108,7 @@
                         which is why I fell in love with software development & ultimately found my calling.
                     </p>
                 </div>
-                <button type="button" class="btn button primary-button text-uppercase">Download cv</button>
+                <a href="https://docs.google.com/document/d/1qNkhrYK5gTDhB-iHQyVLz2-z49nv2do8q_L_cEBHdG8/edit?usp=sharing" rel="noopener noreferrer" target="_blank" class="btn button primary-button text-uppercase" type="button" role="button" aria-label="file">Download CV</a>
             </div>
         </div>
     </div>
@@ -117,9 +117,8 @@
 <section class="skills-area">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 text-*-center skills-title">
-                <h1 class="text-uppercase title-text"> Technical Skills </h1>
-                <p class="parra"> All of the skills acquired will go here !!</p>
+            <div class="col-lg-12 skills-title">
+                <h1 class="text-uppercase title-text"> Skills </h1>
             </div>
         </div>
     </div>
@@ -127,12 +126,12 @@
          <div class="row">
             <div class="col-lg-3 col-md-6 col-sm-12">
                 <div class="skills">
-                    <div class="skills-img text-*-center py-4">
-                        <img class="mx-auto rounded-circle img-fluid" style="width:60px;" src="img/css-3.svg" alt="CSS3 logo">
-                        <div class="card-body text-*-center">
+                    <div class="py-4">
+                        <img class="skills-img rounded-circle" style="width:60px;" src="img/css-3.svg" alt="CSS3 logo">
+                        <div class="card-body text-center">
                             <h5 class="card-title text-uppercase font-roboto">CSS3</h5>
                             <p class="card-text text-secondary">
-                                Some quick details regarding the skill set above!!!
+                                Language used to style HTML documents and implemented its style standards and guides.
                             </p>
                         </div>
                     </div>
@@ -140,12 +139,12 @@
             </div>
             <div class="col-lg-3 col-md-6 col-sm-12">
                 <div class="skills">
-                    <div class="skills-img text-*-center py-4">
-                        <img class="mx-auto rounded-circle img-fluid" style="width:60px;" src="img/html-1.svg" alt="HTML5 logo">
-                        <div class="card-body text-*-center">
+                    <div class="py-4">
+                        <img class="skills-img rounded-circle" style="width:60px;" src="img/html-1.svg" alt="HTML5 logo">
+                        <div class="card-body text-center">
                             <h5 class="card-title text-uppercase font-roboto">HTML5</h5>
                             <p class="card-text text-secondary">
-                                Some quick details regarding the skill set above!!!
+                                Designed web applications using this markup language.
                             </p>
                         </div>
                     </div>
@@ -153,12 +152,12 @@
             </div>
             <div class="col-lg-3 col-md-6 col-sm-12">
                 <div class="skills">
-                    <div class="skills-img text-*-center py-4">
-                        <img class="mx-auto rounded-circle img-fluid" style="width:60px;"  src="img/javascript-1.svg" alt="JS logo">
-                        <div class="card-body text-*-center">
+                    <div class="py-4">
+                        <img class="skills-img rounded-circle" style="width:60px;"  src="img/javascript-1.svg" alt="JS logo">
+                        <div class="card-body text-center">
                             <h5 class="card-title text-uppercase font-roboto">Javascript</h5>
                             <p class="card-text text-secondary">
-                                Some quick details regarding the skill set above!!!
+                                Implemented the front-end logic that defines the behavior of the visual elements of a web application.   
                             </p>
                         </div>
                     </div>
@@ -166,12 +165,12 @@
             </div>
             <div class="col-lg-3 col-md-6 col-sm-12">
                 <div class="skills">
-                    <div class="skills-img text-*-center py-4">
-                        <img class="mx-auto rounded-circle img-fluid" style="width:60px;" src="img/gatsby.svg" alt="Gatsby logo">
-                        <div class="card-body text-*-center">
+                    <div class="py-4">
+                        <img class="skills-img rounded-circle" style="width:60px;" src="img/gatsby.svg" alt="Gatsby logo">
+                        <div class="card-body text-center">
                             <h5 class="card-title text-uppercase font-roboto">Gatsby</h5>
                             <p class="card-text text-secondary">
-                                Some quick details regarding the skill set above!!!
+                               An open-source static site generator framework based on React that helps developers build blazing fast websites and apps.
                             </p>
                         </div>
                     </div>
@@ -183,12 +182,12 @@
         <div class="row">
            <div class="col-lg-3 col-md-6 col-sm-12">
                <div class="skills">
-                   <div class="skills-img text-*-center py-4">
-                       <img class="mx-auto rounded-circle img-fluid" style="width:60px;" src="img/Bootstrap.png" alt="Bootstrap logo">
-                       <div class="card-body text-*-center">
+                   <div class="py-4">
+                       <img class="skills-img rounded-circle" style="width:60px;" src="img/Bootstrap.png" alt="Bootstrap logo">
+                       <div class="card-body text-center">
                            <h5 class="card-title text-uppercase font-roboto">Bootstrap</h5>
                            <p class="card-text text-secondary">
-                               Some quick details regarding the skill set above!!!
+                            A Front-end framework used to create UI interface elements, modern websites and web apps.
                            </p>
                        </div>
                    </div>
@@ -196,12 +195,12 @@
            </div>
            <div class="col-lg-3 col-md-6 col-sm-12">
                <div class="skills">
-                   <div class="skills-img text-*-center py-4">
-                       <img class="mx-auto rounded-circle img-fluid" style="width:60px;" src="img/react-1.svg" alt="Reactjs logo">
-                       <div class="card-body text-*-center">
-                           <h5 class="card-title text-uppercase font-roboto">Reactjs</h5>
+                   <div class="py-4">
+                       <img class="skills-img rounded-circle" style="width:60px;" src="img/react-1.svg" alt="Reactjs logo">
+                       <div class="card-body text-center">
+                           <h5 class="card-title text-uppercase font-roboto">React.js</h5>
                            <p class="card-text text-secondary">
-                               Some quick details regarding the skill set above!!!
+                            Built cross-browser compatible and accessibility compliant websites using React.
                            </p>
                        </div>
                    </div>
@@ -209,12 +208,12 @@
            </div>
            <div class="col-lg-3 col-md-6 col-sm-12">
                <div class="skills">
-                   <div class="skills-img text-*-center py-4">
-                       <img class="mx-auto rounded-circle img-fluid" style="width:60px;" src="img/nodejs-1.svg" alt="Nodejs logo">
-                       <div class="card-body text-*-center">
+                   <div class="py-4">
+                       <img class="skills-img rounded-circle" style="width:60px;" src="img/nodejs-1.svg" alt="Nodejs logo">
+                       <div class="card-body text-center">
                            <h5 class="card-title text-uppercase font-roboto">Nodejs</h5>
                            <p class="card-text text-secondary">
-                               Some quick details regarding the skill set above!!!
+                            Experience developing and writing server-side web application logic or back-end components in JavaScript.
                            </p>
                        </div>
                    </div>
@@ -222,12 +221,12 @@
            </div>
            <div class="col-lg-3 col-md-6 col-sm-12">
                <div class="skills">
-                   <div class="skills-img text-*-center py-4">
-                       <img class="mx-auto rounded-circle img-fluid" style="width:60px;" src="img/Wordpresslogo.png" alt="WP logo">
-                       <div class="card-body text-*-center">
+                   <div class="py-4">
+                       <img class="skills-img rounded-circle" style="width:60px;" src="img/Wordpresslogo.png" alt="WP logo">
+                       <div class="card-body text-center">
                            <h5 class="card-title text-uppercase font-roboto">WordPress Developer</h5>
                            <p class="card-text text-secondary">
-                               Some quick details regarding the skill set above!!!
+                            Well versed in the infrastructure and ecosystem of the WordPress platform. 
                            </p>
                        </div>
                    </div>
